--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,8 +1,13 @@
 html,
 body {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Figtree", sans-serif;
   background-color: #ffffff;
-  color: #3a3a3c;
+  background: url(../images/bg.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #ffffff;
   min-width: 375px;
   scroll-behavior: smooth;
 }
@@ -13,4 +18,37 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.Toastify__toast {
+  background: #091522 !important;
+  box-shadow: 0px -4px 16px #000000 !important;
+  height: 80px;
+  width: 100%;
+  border-bottom: 1px solid #ffffff80;
+}
+
+.Toastify__close-button {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  color: #ffffff;
+  width: 20px;
+  height: 20px;
+  opacity: 0.7;
+}
+
+.Toastify__close-button > svg {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.Toastify__toast-body {
+  padding-left: 20px;
+}
+
+.Toastify__toast-icon {
+  font-size: 20px;
 }
