--- a/apps/my-portfolio/public/styles/global.css
+++ b/apps/my-portfolio/public/styles/global.css
@@ -3,6 +3,7 @@ body {
   font-family: "Fira Code", monospace;
   font-size: 16px;
   color: #ffffff;
+  background-color: #010c15;
 }
 
 * {
@@ -11,4 +12,5 @@ body {
 
 a {
   text-decoration: none;
+  color: #ffffff;
 }
